--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <h1>Cadastro de Viagens</h1>
             <h2>Nova Viagem</h2>
             <form action="/home" method="post">
-                <input type="text" id="destino" name="destino" placeholder="Destino" required>
+                <input type="text" id="destino" name="destino" placeholder="Ex: Penha" required>
                 <input type="date" id="data_viagem" name="data_viagem" required>
-                <input type="number" id="preco" name="preco" placeholder="Preço (R$)" required>
-                <input type="number" id="vagas" name="vagas" placeholder="Vagas" required>
+                <input type="number" id="preco" name="preco" placeholder="Ex: R$1000" required>
+                <input type="number" id="vagas" name="vagas" placeholder="Ex: 2" required>
                 <button type="submit" class="cadastrar-button">Cadastrar Viagem</button>
             </form>
         </div>
